Traducido el Index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,12 @@ const title = 'Home'
     <div class="hero-body">
       <div class="container">
         <div class="columns is-vcentered">
-          <div class="column is-5 landing-caption">
-            <h1 class="title is-1 is-bold is-spaced">Manage and deploy your apps seamlessly.</h1>
+          <div class="column is-6 landing-caption">
+            <h1 class="title is-1 is-bold is-spaced">Administre e implementa sus aplicaciones sin problemas.</h1>
             <h2 class="subtitle is-5 is-muted">Lorem ipsum sit dolor amet is a dummy text used by typography industry</h2>
             <div>
-              <a class="button cta primary-btn raised mr-2"> Get Started </a>
-              <a class="button cta"> Discover</a>
+              <a class="button cta primary-btn raised mr-2"> Empezar </a>
+              <a class="button cta"> Descubrir</a>
             </div>
           </div>
           <div class="column is-7">
@@ -57,8 +57,8 @@ const title = 'Home'
   <section class="section is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Great Power Comes</h2>
-        <h3 class="subtitle is-5 is-muted">With great Responsability</h3>
+        <h2 class="title is-2">Viene un gran poder</h2>
+        <h3 class="subtitle is-5 is-muted">Con gran responsabilidad</h3>
         <div class="divider is-centered"></div>
       </div>
 
@@ -67,48 +67,48 @@ const title = 'Home'
           <div class="column is-4">
             <div class="feature-card is-bordered has-text-centered is-feature-reveal">
               <div class="card-title">
-                <h4>App builder</h4>
+                <h4>Generador de aplicaciones</h4>
               </div>
               <div class="card-icon">
                 <img src="/img/icons/web.svg" />
               </div>
               <div class="card-text">
-                <p>This is some cool explanatory text that is on two rows</p>
+                <p>Este es un texto explicativo genial que está en dos filas</p>
               </div>
               <div class="card-action">
-                <a href="#" class="button btn-align-md primary-btn raised">Free Trial</a>
+                <a href="#" class="button btn-align-md primary-btn raised">Prueba gratis</a>
               </div>
             </div>
           </div>
           <div class="column is-4">
             <div class="feature-card is-bordered has-text-centered is-feature-reveal">
               <div class="card-title">
-                <h4>Cloud integration</h4>
+                <h4>Integración de nubes</h4>
               </div>
               <div class="card-icon">
                 <img src="/img/icons/rocket.svg" />
               </div>
               <div class="card-text">
-                <p>This is some explanatory text that is on two rows</p>
+                <p>Este es un texto explicativo que está en dos filas</p>
               </div>
               <div class="card-action">
-                <a href="#" class="button btn-align-md primary-btn raised">Get Started</a>
+                <a href="#" class="button btn-align-md primary-btn raised">Empezar</a>
               </div>
             </div>
           </div>
           <div class="column is-4">
             <div class="feature-card is-bordered has-text-centered is-feature-reveal">
               <div class="card-title">
-                <h4>Addons & Plugins</h4>
+                <h4>Complementos y complementos</h4>
               </div>
               <div class="card-icon">
                 <img src="/img/icons/light-bulb.svg" />
               </div>
               <div class="card-text">
-                <p>This is some explanatory text that is on two rows</p>
+                <p>Este es un texto explicativo que está en dos filas</p>
               </div>
               <div class="card-action">
-                <a href="#" class="button btn-align-md primary-btn raised">Get Started</a>
+                <a href="#" class="button btn-align-md primary-btn raised">Empezar</a>
               </div>
             </div>
           </div>
@@ -120,14 +120,14 @@ const title = 'Home'
   <section class="section is-medium section-feature-grey">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Awesome Features</h2>
-        <h3 class="subtitle is-5 is-muted">To make you super happy</h3>
+        <h2 class="title is-2">Características impresionantes</h2>
+        <h3 class="subtitle is-5 is-muted">Para hacerte súper feliz</h3>
         <div class="divider is-centered"></div>
       </div>
 
       <div class="columns is-vcentered side-feature mt-60">
         <div class="column is-4 is-offset-2">
-          <h3 class="title is-3 mb-10 is-title-reveal">Connect with people</h3>
+          <h3 class="title is-3 mb-10 is-title-reveal">Conéctese con la gente</h3>
           <p class="subtitle is-5 is-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
           </p>
@@ -142,7 +142,7 @@ const title = 'Home'
           <img src="/img/illustrations/features/feature-2.png" alt="" />
         </div>
         <div class="column is-4 is-offset-1">
-          <h3 class="title is-3 mb-10 is-title-reveal">Collaborate easily</h3>
+          <h3 class="title is-3 mb-10 is-title-reveal">Colaborar fácilmente</h3>
           <p class="subtitle is-5 is-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
           </p>
@@ -155,7 +155,7 @@ const title = 'Home'
     <div class="container">
       <div class="columns is-vcentered app-side">
         <div class="column is-4 is-offset-1">
-          <h3 class="title is-3 is-spaced is-title-reveal">An intuitive app</h3>
+          <h3 class="title is-3 is-spaced is-title-reveal">Una aplicación intuitiva</h3>
           <p class="subtitle is-5 is-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
           </p>
@@ -172,8 +172,8 @@ const title = 'Home'
   <section class="section is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Wait, there's more</h2>
-        <h3 class="subtitle is-5 is-muted">To make you super happy</h3>
+        <h2 class="title is-2">Espera, hay más</h2>
+        <h3 class="subtitle is-5 is-muted">Para hacerte súper feliz</h3>
         <div class="divider is-centered"></div>
       </div>
 
@@ -185,7 +185,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:github"></iconify-icon>
               </div>
               <h4>Github</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -193,8 +193,8 @@ const title = 'Home'
               <div class="icon-wrap is-icon-reveal">
                 <iconify-icon class="iconify" icon="fa6-brands:bitbucket"></iconify-icon>
               </div>
-              <h4>Bitbucket</h4>
-              <p>Some feature text</p>
+              <h4>bitbucket</h4>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -203,7 +203,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:slack"></iconify-icon>
               </div>
               <h4>Slack</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -212,7 +212,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:npm"></iconify-icon>
               </div>
               <h4>Npm</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -221,7 +221,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fluent:javascript-16-regular"></iconify-icon>
               </div>
               <h4>Javascript</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -230,7 +230,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fontisto:nodejs"></iconify-icon>
               </div>
               <h4>Nodejs</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -239,7 +239,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="ph:angular-logo"></iconify-icon>
               </div>
               <h4>Angular</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -248,7 +248,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="bi:google"></iconify-icon>
               </div>
               <h4>Google</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -257,7 +257,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="carbon:logo-python"></iconify-icon>
               </div>
               <h4>Python</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -266,7 +266,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="bi:wordpress"></iconify-icon>
               </div>
               <h4>WordPress</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -275,7 +275,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="icon-park-solid:android"></iconify-icon>
               </div>
               <h4>Android</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
           <div class="column is-3">
@@ -284,7 +284,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="uiw:apple"></iconify-icon>
               </div>
               <h4>Apple</h4>
-              <p>Some feature text</p>
+              <p>Algo de texto</p>
             </div>
           </div>
         </div>
@@ -296,8 +296,8 @@ const title = 'Home'
     <div class="overlay"></div>
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2 light-text is-spaced">Our clients love us</h2>
-        <h3 class="subtitle is-5 light-text">Look at what they say about us</h3>
+        <h2 class="title is-2 light-text is-spaced">Nuestros clientes nos aman</h2>
+        <h3 class="subtitle is-5 light-text">Mira lo que dicen sobre nosotros</h3>
       </div>
 
       <div class="testimonials content-wrapper">
@@ -325,7 +325,7 @@ const title = 'Home'
                 <img src="/img/illustrations/faces/2.png" alt="" />
                 <div>
                   <h5>John Bradley</h5>
-                  <span>Financial Analyst</span>
+                  <span>Analista financiero</span>
                 </div>
               </div>
             </figure>
@@ -339,7 +339,7 @@ const title = 'Home'
                 <img src="/img/illustrations/faces/3.png" alt="" />
                 <div>
                   <h5>Gary Blackman</h5>
-                  <span>HR Manager</span>
+                  <span>Gerente de Recursos Humanos</span>
                 </div>
               </div>
             </figure>
@@ -352,32 +352,32 @@ const title = 'Home'
   <section class="section is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Get Started</h2>
-        <h3 class="subtitle is-5 is-muted">Choose one of our plans</h3>
+        <h2 class="title is-2">Empezar</h2>
+        <h3 class="subtitle is-5 is-muted">Elija uno de nuestros planes</h3>
         <div class="divider is-centered"></div>
       </div>
 
       <div class="pricing-wrap">
         <div class="feature-card is-pricing has-text-centered">
-          <h3 class="plan-name">Starter</h3>
+          <h3 class="plan-name">Inicio</h3>
           <img src="/img/illustrations/pricing/1.svg" alt="" />
           <div class="price">0</div>
-          <p>Sign up, get some awesome features and get started now</p>
-          <a class="button is-fullwidth is-bold">Get Started</a>
+          <p>Regístrese, obtenga algunas características increíbles y comience ahora</p>
+          <a class="button is-fullwidth is-bold">Empezar</a>
         </div>
         <div class="feature-card is-pricing has-text-centered">
           <h3 class="plan-name">Pro</h3>
           <img src="/img/illustrations/pricing/2.svg" alt="" />
           <div class="price">15</div>
-          <p>Sign up, get some awesome features and get started now</p>
-          <a class="button is-fullwidth primary-btn raised is-bold">Get Started</a>
+          <p>Regístrese, obtenga algunas características increíbles y comience ahora</p>
+          <a class="button is-fullwidth primary-btn raised is-bold">Empezar</a>
         </div>
         <div class="feature-card is-pricing has-text-centered">
           <h3 class="plan-name">Business</h3>
           <img src="/img/illustrations/pricing/3.svg" alt="" />
           <div class="price">30</div>
-          <p>Sign up, get some awesome features and get started now</p>
-          <a class="button is-fullwidth is-bold">Get Started</a>
+          <p>Regístrese, obtenga algunas características increíbles y comience ahora</p>
+          <a class="button is-fullwidth is-bold">Empezar</a>
         </div>
       </div>
     </div>
@@ -386,8 +386,8 @@ const title = 'Home'
   <section class="section section-light-grey is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2 is-spaced">Drop us a line or two</h2>
-        <h3 class="subtitle is-5 is-muted">We'd love to hear from You</h3>
+        <h2 class="title is-2 is-spaced">Déjanos una o dos líneas</h2>
+        <h3 class="subtitle is-5 is-muted">Nos encantaría saber de ti</h3>
         <div class="divider is-centered"></div>
       </div>
 
@@ -413,7 +413,7 @@ const title = 'Home'
                 </div>
                 <div class="column is-12">
                   <div class="form-footer has-text-right mt-10">
-                    <button class="button cta is-large primary-btn form-button raised is-clear">Send Message</button>
+                    <button class="button cta is-large primary-btn form-button raised is-clear">Enviar mensaje</button>
                   </div>
                 </div>
               </div>
@@ -431,25 +431,25 @@ const title = 'Home'
         <div class="tabs-wrapper">
           <div class="tabs">
             <ul>
-              <li class="is-active" data-tab="login-tab"><a>Login</a></li>
-              <li data-tab="register-tab"><a>Register</a></li>
+              <li class="is-active" data-tab="login-tab"><a>Acceso</a></li>
+              <li data-tab="register-tab"><a>Registro</a></li>
             </ul>
           </div>
           <div id="login-tab" class="tab-content is-active">
             <div class="field">
-              <label>Username</label>
+              <label>Nombre de usuario</label>
               <div class="control">
                 <input type="text" class="input is-medium" placeholder="Enter username" />
               </div>
             </div>
             <div class="field">
-              <label>Password</label>
+              <label>Contraseña</label>
               <div class="control">
                 <input type="password" class="input is-medium" placeholder="Enter password" />
               </div>
             </div>
 
-            <a class="button is-fullwidth secondary-btn is-rounded raised">Log in</a>
+            <a class="button is-fullwidth secondary-btn is-rounded raised">Acceso</a>
           </div>
         </div>
       </div>
