Agregando informacion al index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const title = 'Home'
         <div class="columns is-vcentered">
           <div class="column is-6 landing-caption">
             <h1 class="title is-1 is-bold is-spaced">Administre e implementa sus aplicaciones sin problemas.</h1>
-            <h2 class="subtitle is-5 is-muted">Lorem ipsum sit dolor amet is a dummy text used by typography industry</h2>
+            <h2 class="subtitle is-5 is-muted">Con nuestra plataforma, podrá administrar e implementar sus aplicaciones de forma sencilla y sin contratiempos.</h2>
             <div>
               <a class="button cta primary-btn raised mr-2"> Empezar </a>
               <a class="button cta"> Descubrir</a>
@@ -57,8 +57,8 @@ const title = 'Home'
   <section class="section is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Viene un gran poder</h2>
-        <h3 class="subtitle is-5 is-muted">Con gran responsabilidad</h3>
+        <h2 class="title is-2">Llega un gran poder</h2>
+        <h3 class="subtitle is-5 is-muted">Con una gran responsabilidad</h3>
         <div class="divider is-centered"></div>
       </div>
 
@@ -67,13 +67,13 @@ const title = 'Home'
           <div class="column is-4">
             <div class="feature-card is-bordered has-text-centered is-feature-reveal">
               <div class="card-title">
-                <h4>Generador de aplicaciones</h4>
+                <h4>Construccion de aplicaciones</h4>
               </div>
               <div class="card-icon">
                 <img src="/img/icons/web.svg" />
               </div>
               <div class="card-text">
-                <p>Este es un texto explicativo genial que está en dos filas</p>
+                <p>Construimos aplicaciones a medida para tu negocio, adaptadas a tus necesidades específicas.</p>
               </div>
               <div class="card-action">
                 <a href="#" class="button btn-align-md primary-btn raised">Prueba gratis</a>
@@ -83,13 +83,13 @@ const title = 'Home'
           <div class="column is-4">
             <div class="feature-card is-bordered has-text-centered is-feature-reveal">
               <div class="card-title">
-                <h4>Integración de nubes</h4>
+                <h4>Integración en la nube</h4>
               </div>
               <div class="card-icon">
                 <img src="/img/icons/rocket.svg" />
               </div>
               <div class="card-text">
-                <p>Este es un texto explicativo que está en dos filas</p>
+                <p>Simplifica tu entorno tecnológico y lleva tu negocio al siguiente nivel con nuestra integración en la nube.</p>
               </div>
               <div class="card-action">
                 <a href="#" class="button btn-align-md primary-btn raised">Empezar</a>
@@ -105,7 +105,7 @@ const title = 'Home'
                 <img src="/img/icons/light-bulb.svg" />
               </div>
               <div class="card-text">
-                <p>Este es un texto explicativo que está en dos filas</p>
+                <p>Simplifica tu trabajo diario y maximiza la eficiencia con nuestros complementos y extensiones.</p>
               </div>
               <div class="card-action">
                 <a href="#" class="button btn-align-md primary-btn raised">Empezar</a>
@@ -129,7 +129,9 @@ const title = 'Home'
         <div class="column is-4 is-offset-2">
           <h3 class="title is-3 mb-10 is-title-reveal">Conéctese con la gente</h3>
           <p class="subtitle is-5 is-muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
+            Conéctese con la gente de una manera más significativa y efectiva con nuestra plataforma.
+            Ya sea que esté buscando interactuar con clientes, colaboradores o seguidores, nuestras 
+            herramientas le permitirán comunicarse de manera más eficiente y mantener relaciones sólidas.
           </p>
         </div>
         <div class="column is-5">
@@ -144,7 +146,9 @@ const title = 'Home'
         <div class="column is-4 is-offset-1">
           <h3 class="title is-3 mb-10 is-title-reveal">Colaborar fácilmente</h3>
           <p class="subtitle is-5 is-muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
+            Colabora fácilmente con tu equipo y tus socios con nuestra plataforma de colaboración.
+            Con herramientas intuitivas y eficientes, podrás compartir información, coordinar tareas 
+            y trabajar en proyectos de forma conjunta, sin importar la distancia.
           </p>
         </div>
       </div>
@@ -157,7 +161,9 @@ const title = 'Home'
         <div class="column is-4 is-offset-1">
           <h3 class="title is-3 is-spaced is-title-reveal">Una aplicación intuitiva</h3>
           <p class="subtitle is-5 is-muted">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum audissem Antiochum, Brute, ut solebam, cum M. Quae diligentissime contra Aristonem dicuntur a Chryippo.
+            Diseñamos nuestra aplicación con una interfaz intuitiva y fácil de usar, para que puedas navegar
+            y utilizar todas sus funciones sin complicaciones. Con un diseño limpio y claro, encontrarás todo 
+            lo que necesitas de manera rápida y sencilla. Simplifica tu experiencia de usuario con nuestra aplicación intuitiva.
           </p>
         </div>
         <div class="column is-7">
@@ -172,8 +178,8 @@ const title = 'Home'
   <section class="section is-medium">
     <div class="container">
       <div class="title-wrapper has-text-centered">
-        <h2 class="title is-2">Espera, hay más</h2>
-        <h3 class="subtitle is-5 is-muted">Para hacerte súper feliz</h3>
+        <h2 class="title is-2">Usamos las siguientes tecnologias</h2>
+        <h3 class="subtitle is-5 is-muted"></h3>
         <div class="divider is-centered"></div>
       </div>
 
@@ -185,7 +191,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:github"></iconify-icon>
               </div>
               <h4>Github</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -194,7 +200,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:bitbucket"></iconify-icon>
               </div>
               <h4>bitbucket</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -203,7 +209,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:slack"></iconify-icon>
               </div>
               <h4>Slack</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -212,7 +218,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fa6-brands:npm"></iconify-icon>
               </div>
               <h4>Npm</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -221,7 +227,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fluent:javascript-16-regular"></iconify-icon>
               </div>
               <h4>Javascript</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -230,7 +236,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="fontisto:nodejs"></iconify-icon>
               </div>
               <h4>Nodejs</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -239,7 +245,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="ph:angular-logo"></iconify-icon>
               </div>
               <h4>Angular</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -248,7 +254,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="bi:google"></iconify-icon>
               </div>
               <h4>Google</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -257,7 +263,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="carbon:logo-python"></iconify-icon>
               </div>
               <h4>Python</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -266,7 +272,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="bi:wordpress"></iconify-icon>
               </div>
               <h4>WordPress</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -275,7 +281,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="icon-park-solid:android"></iconify-icon>
               </div>
               <h4>Android</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
           <div class="column is-3">
@@ -284,7 +290,7 @@ const title = 'Home'
                 <iconify-icon class="iconify" icon="uiw:apple"></iconify-icon>
               </div>
               <h4>Apple</h4>
-              <p>Algo de texto</p>
+              <p></p>
             </div>
           </div>
         </div>
@@ -305,13 +311,15 @@ const title = 'Home'
           <div class="column is-4">
             <figure class="testimonial">
               <blockquote>
-                Lorem ipsum dolor sit amet, elit deleniti dissentias quo eu, hinc minim appetere te usu, ea case duis scribentur has. Duo te consequat elaboraret, has quando suavitate at.
+                Desde que implementamos esta aplicación, hemos notado una mejora significativa en nuestra capacidad para colaborar en proyectos. 
+                La interfaz intuitiva y las herramientas de comunicación integradas nos han permitido trabajar de manera más eficiente y coordinada, 
+                incluso cuando estamos dispersos en diferentes ubicaciones.
               </blockquote>
               <div class="author">
                 <img src="/img/illustrations/faces/1.png" alt="" />
                 <div>
                   <h5>Irma Walters</h5>
-                  <span>Accountant</span>
+                  <span>Contadora</span>
                 </div>
               </div>
             </figure>
@@ -319,7 +327,8 @@ const title = 'Home'
           <div class="column is-4">
             <figure class="testimonial">
               <blockquote>
-                Lorem ipsum dolor sit amet, elit deleniti dissentias quo eu, hinc minim appetere te usu, ea case duis scribentur has. Duo te consequat elaboraret, has quando suavitate at.
+                La aplicación es muy fácil de entender y utilizar, lo que ha hecho que la transición de nuestros equipos sea muy fluida. 
+                Hemos podido completar proyectos de manera más rápida y eficiente gracias a las funciones y herramientas que ofrece la aplicación.
               </blockquote>
               <div class="author">
                 <img src="/img/illustrations/faces/2.png" alt="" />
@@ -333,7 +342,8 @@ const title = 'Home'
           <div class="column is-4">
             <figure class="testimonial">
               <blockquote>
-                Lorem ipsum dolor sit amet, elit deleniti dissentias quo eu, hinc minim appetere te usu, ea case duis scribentur has. Duo te consequat elaboraret, has quando suavitate at.
+                La integración en la nube nos ha permitido expandir nuestras operaciones de manera rápida y eficiente, sin tener que preocuparnos 
+                por la infraestructura. Hemos podido acceder a recursos y servicios avanzados que han mejorado significativamente nuestra capacidad para ofrecer soluciones a nuestros clientes.
               </blockquote>
               <div class="author">
                 <img src="/img/illustrations/faces/3.png" alt="" />
